# bad-words

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  pytest.ini  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: cicd.yml  python-app.yml
src/: __init__.py  index.ts
src/api/: app.py  middleware.py
src/api/v1/: router.py
src/api/v1/endpoints/: config.py  health.py  profanity.py
src/config/: logging.py  settings.py
src/lib/: checkWithBadWordsNext.ts  checkWithProfanity.ts  index.ts
src/recources/: bad_words_de.ts  bad_words_en.ts  clean_list.py
src/services/: profanity.py
tests/: test_api.py  test_config.py  test_profanity.py
